objects/Job_Offers__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Offer_Details__c</fullName>
        <label>Additional Offer Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Applicant_Name__c</fullName>
        <formula>Application__r.Candidate__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Job_Applications__c</referenceTo>
        <relationshipLabel>Job Offers</relationshipLabel>
        <relationshipName>Job_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Background_Authorization_Returned__c</fullName>
        <label>Background Authorization Returned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Background_Check_Completed__c</fullName>
        <label>Background Check Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Background_Check_Started__c</fullName>
        <label>Background Check Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Base_Compensation__c</fullName>
        <label>Base Compensation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bonus__c</fullName>
        <label>Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Candidate_Name__c</fullName>
        <formula>Application__r.Candidate__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Job Offers</relationshipLabel>
        <relationshipName>Job_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compensation_Type__c</fullName>
        <label>Compensation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Annual Salary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Formal_Offer__c</fullName>
        <label>Date Offer Extended</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Verbal_Offer__c</fullName>
        <label>Date of Verbal Offer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drug_Physical_Completed__c</fullName>
        <label>Drug/Physical Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Agreement_Covenants_Sent_On__c</fullName>
        <label>Employee Agreement/Covenants Sent On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employment_Agreement__c</fullName>
        <label>Employment Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No EA</fullName>
                </value>
                <value>
                    <fullName>Non-solicit/non-compete 1 yr</fullName>
                </value>
                <value>
                    <fullName>Non-solicit/non-compete 2 yr</fullName>
                </value>
                <value>
                    <fullName>Non-solicit 1 yr</fullName>
                </value>
                <value>
                    <fullName>Non-solicit 2 yr</fullName>
                </value>
                <value>
                    <fullName>GA ECA</fullName>
                </value>
                <value>
                    <fullName>Nebraska 12 Months EA</fullName>
                </value>
                <value>
                    <fullName>Nebraska 18 Months EA</fullName>
                </value>
                <value>
                    <fullName>North Carolina EA</fullName>
                </value>
                <value>
                    <fullName>Amendment to EA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executed_Offer_Letter_Returned__c</fullName>
        <label>Executed Offer Letter Returned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hired_in_ADP_Elec_Onboarding_Created__c</fullName>
        <label>Hired in ADP-Elec Onboarding Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Offer_Status__c</fullName>
        <label>Job Offer Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Offer Extended</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Offer Rejected</fullName>
                </value>
                <value>
                    <fullName>No Longer Onboarding</fullName>
                </value>
                <value>
                    <fullName>Compliance Approved - Pending Formal Offer</fullName>
                    <isActive>false</isActive>
                    <label>Compliance Approved - Pending Formal Offer</label>
                </value>
                <value>
                    <fullName>Formal Offer Sent</fullName>
                    <isActive>false</isActive>
                    <label>Formal Offer Sent</label>
                </value>
                <value>
                    <fullName>Negotation</fullName>
                    <isActive>false</isActive>
                    <label>Negotation</label>
                </value>
                <value>
                    <fullName>Offered</fullName>
                    <isActive>false</isActive>
                    <label>Offered</label>
                </value>
                <value>
                    <fullName>Pending Compliance Approval</fullName>
                    <isActive>false</isActive>
                    <label>Pending Compliance Approval</label>
                </value>
                <value>
                    <fullName>Pending Offer</fullName>
                    <isActive>false</isActive>
                    <label>Pending Offer</label>
                </value>
                <value>
                    <fullName>Verbal Offer Made</fullName>
                    <isActive>false</isActive>
                    <label>Verbal Offer Made</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <formula>Application__r.Jobs__r.Job_Title__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jobs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Jobs</label>
        <referenceTo>Jobs__c</referenceTo>
        <relationshipLabel>Job Offers</relationshipLabel>
        <relationshipName>Job_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Job Offers</relationshipLabel>
        <relationshipName>Job_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Start_Date__c</fullName>
        <label>Proposed Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reports_To__c</fullName>
        <formula>Jobs__r.New_Hire_Will_Report_To__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reports To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Incentive_Plan__c</fullName>
        <label>Sales Incentive Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value 1</fullName>
                </value>
                <value>
                    <fullName>Value 2</fullName>
                </value>
                <value>
                    <fullName>Value 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source</label>
        <referenceTo>Job_Resource__c</referenceTo>
        <relationshipLabel>Job Offers</relationshipLabel>
        <relationshipName>Job_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wants_and_Warrants_Returned__c</fullName>
        <label>Wants and Warrants Returned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Welcome_Email_Sent__c</fullName>
        <label>Welcome Email Sent</label>
        <type>Date</type>
    </fields>
    <label>Job Offer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Job_Offer_Status__c</columns>
        <columns>Background_Authorization_Returned__c</columns>
        <columns>Executed_Offer_Letter_Returned__c</columns>
        <columns>Applicant_Name__c</columns>
        <columns>Background_Check_Started__c</columns>
        <columns>Hired_in_ADP_Elec_Onboarding_Created__c</columns>
        <columns>Welcome_Email_Sent__c</columns>
        <columns>Wants_and_Warrants_Returned__c</columns>
        <columns>Drug_Physical_Completed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Job_Offers_Paperwork_Check</fullName>
        <columns>NAME</columns>
        <columns>Job_Offer_Status__c</columns>
        <columns>Applicant_Name__c</columns>
        <columns>Job_Title__c</columns>
        <columns>Proposed_Start_Date__c</columns>
        <columns>Executed_Offer_Letter_Returned__c</columns>
        <columns>Wants_and_Warrants_Returned__c</columns>
        <columns>Background_Authorization_Returned__c</columns>
        <columns>Background_Check_Started__c</columns>
        <columns>Hired_in_ADP_Elec_Onboarding_Created__c</columns>
        <columns>Welcome_Email_Sent__c</columns>
        <columns>Background_Check_Completed__c</columns>
        <columns>Drug_Physical_Completed__c</columns>
        <columns>Employee_Agreement_Covenants_Sent_On__c</columns>
        <columns>Employment_Agreement__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Offer_Status__c</field>
            <operation>notEqual</operation>
            <value>Offer Rejected</value>
        </filters>
        <label>Job Offers - Paperwork Check -</label>
        <sharedTo>
            <group>Human_Resources</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>JO-{0000}</displayFormat>
        <label>Job Offer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Offers</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Employment_Agreement_is_Required</fullName>
        <active>true</active>
        <description>If job offer status = offer extended, you must fill out Employment Agreement</description>
        <errorConditionFormula>AND(
ISPICKVAL( Job_Offer_Status__c , &quot;Offer Extended&quot;) ,
ISPICKVAL( Employment_Agreement__c ,&quot;&quot;) )</errorConditionFormula>
        <errorDisplayField>Employment_Agreement__c</errorDisplayField>
        <errorMessage>When Job Offer Status is Offer Extended, an Employment Agreement value is required.
Please, enter an Employment Agreement value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Proposed_Start_Date_must_be_filled_out</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Job_Offer_Status__c , &quot;Accepted&quot;),ISBLANK( Proposed_Start_Date__c ))</errorConditionFormula>
        <errorMessage>In order to mark this Job Offer as Accepted, please fill out a Proposed Start Date. This date can be changed later if needed.</errorMessage>
    </validationRules>
</CustomObject>